src/test/deca/syntax/invalid/lex/FauxCaractere2.deca
// Description:
//    Programme minimaliste utilisant un faux string
//
// Resultats:
//    token recognition error at: '\'
//
// Historique:
//    cree le 01/01/2022


"AUSSI FAUX string;




